fix: after using aos animation overflow-x is has been shown

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,5 +19,6 @@ html {
     background-image: url("/background.webp");
     background-repeat: repeat-y;
     background-position: center;
+    overflow-x: hidden;
   }
 }
